results/src/core/charts/common2/comments/Comments.scss
@import '../../../../stylesheets/_breakpoints.scss';

.comments-wrapper {
    .block-question {
        background-color: var(--backgroundBackgroundColor);
        margin: 0;
        margin-top: var(--halfSpacing);
    }
}
.comments-wrapper-note {
    font-size: 0.9rem;
    margin-bottom: var(--halfSpacing);
    color: var(--textAltColor);
}
.comments-contents {
    @include large {
        display: grid;
        grid-template-columns: 300px 1fr;
        gap: var(--doubleSpacing);
    }
}
.comments-heading {
    margin-bottom: var(--spacing);
}
.comments-heading-top {
    display: flex;
    align-items: center;
    justify-content: space-between;
    h3 {
        margin: 0;
    }
}
.comments-count {
    font-size: 1.2rem;
}
.comments-count-current {
}
.comments-count-all {
    color: var(--textAltColor);
}
.comments-filters {
    display: flex;
    gap: var(--doubleSpacing);
    flex-direction: column;
    min-width: 0;
}
.comments-filters-wrapper {
    @include small {
        margin-bottom: var(--spacing);

        & > .Button {
            display: block;
            width: 100%;
            margin-top: var(--spacing);
        }
        &-show .comments-filters {
            display: flex;
        }
        &-hide .comments-filters {
            display: none;
        }
    }
    @include medium-large {
        & > .Button {
            display: none;
        }
    }
}
.filter-section-heading {
    display: grid;
    grid-template-columns: 1fr min-content;
    align-items: center;
    // justify-content: space-between;
    border-bottom: 1px solid var(--borderColor);
    padding-bottom: var(--halfSpacing);
    margin-bottom: var(--halfSpacing);
    h4 {
        margin: 0;
    }
}
.filter-section-description {
    font-size: 0.9rem;
    margin-bottom: var(--halfSpacing);
}

.filter-section-items {
    display: flex;
    flex-wrap: wrap;
    gap: var(--halfSpacing);
}

.comment-message-wrapper {
    border-radius: 5px;
    background: var(--backgroundAlt2Color);
    background: var(--backgroundInvertedColor);
    color: var(--textColorInverted);
    padding: var(--spacing);
    position: relative;
    display: flex;
    justify-content: space-between;
    gap: var(--spacing);
}

.comment-index {
    // font-weight: bold;
    @include small {
        font-size: 1rem;
    }
    @include medium-large {
        font-size: 1.3rem;
    }
    // position: absolute;
    text-align: right;
    // top: 50%;
    // transform: translateY(-50%);
    // right: 15px;
    opacity: 0.35;
}
.comment-quote {
    font-size: 6rem;
    position: absolute;
    top: 0px;
    left: 5px;
    line-height: 1;
    opacity: 0.15;
    font-family: var(--secondaryFontFamily);
}

.comment-message {
    .highlight,
    mark {
        display: inline-block;
        background: #9f9f1366;
    }
}
.comments-list {
    display: grid;
    grid-template-columns: min-content 1fr;
}

.comment-item-wrapper {
    margin-bottom: var(--spacing);
    display: grid;
    grid-template-columns: subgrid;
    gap: var(--halfSpacing);
    grid-column: 1/3;
}

.comment-report-link {
    font-size: 0.7rem;
    display: block;
    white-space: nowrap;
    &,
    &:link {
        color: var(--textAltColor);
    }
    &:hover {
        color: var(--linkColor);
    }
    @include small {
        margin-top: var(--halfSpacing);
    }
}
.comment-footer {
    margin-top: 8px;
    @include medium-large {
        display: flex;
        justify-content: space-between;
    }
}

.comment-filter-item {
    font-size: 0.9rem;
    border-radius: 50px;
    border: none;
    background: var(--backgroundBackgroundColor);
    text-align: left;
    &:hover,
    &-active {
        background: var(--backgroundAlt3Color);
    }
}

.comment-like {
    display: flex;
    gap: var(--quarterSpacing);
    align-items: center;
    border-radius: 50px;
    opacity: 0.5;
    border-color: transparent;
    &-liked {
        border: 1px dashed;
    }
    &-liked,
    &:hover {
        opacity: 1;
    }
}

.chart-comments {
    display: flex;
    align-items: center;
    gap: 5px;
    // border-color: transparent;
    background: none;
    padding: 0;
}

.comment-response {
    display: flex;
    gap: 10px;
    position: relative;
    margin-top: -20px;
    left: 20px;
    flex-wrap: wrap;
}

.experience-item,
.sentiment-item,
.value-item {
    // background-color: var(--bgColor);
    // border: 2px solid var(--color);
    border: none;
    font-size: 0.7rem;
    border-radius: 30px;
    padding: 2px 8px;
    background: var(--backgroundColor);
    background: var(--color);
    text-shadow: 1px 1px #000000bb;
    font-weight: bold;
    text-transform: uppercase;
    white-space: nowrap;

    background: var(--backgroundBackgroundColor);
    box-shadow: 1px 1px 2px #00000088;
}

